--- a/content/data/config.json
+++ b/content/data/config.json
@@ -136,5 +136,6 @@
         "anncmnt_is_home_only": true,
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
-    }
+    },
+    "domain": "https://caring-lettuce-13160.netlify.app"
 }
